methods.slug.SlugSnail.scala.error
Compilation error:
SlugSnail:8: error: not found: value cool
  cool = getCouleurSol();
  ^SlugSnail:10: error: not found: value cool
  return cool == c
         ^